--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+    <head>  
+        <title>Cait Sidener</title>
+    </head>
 
+<body>
+    <h1>Cait Sidener</h1>
+    
+    <br>
+
+    <h1>About Me</h1>
+    
+    <br>
+
+    <img src="assets/images/IMG_1294.jpg" alt="Image of Cait Sidener with her husband and daughter"/>
+
+    <br>
+
+    <p>I'm Cait Sidener and I am a full-stack web developer. I graduated from the University of Washburn with my BA in French, and earned my teaching licensure with an additional endorsement in English. For five years, I taught both languages in the public schools of Kansas (and one year in Virginia). Learning language has always been my passion, and helping others learn how to communicate is one of my strengths.</p>
+    <p>I am the proud mother of an incredibly strong-willed little girl. My husband and I live in Lawrence, Kansas, where we love working on home-improvement projects, hiking around Clinton Lake, and enjoying the infrequent date night sampling the delicious foods that our town has to offer. Over the course of my child's life, I have become an expert baby wearer, made up an entirely new language called "Baby Babble," learned what to do when there is a diaper explosion (call her dada), and cherished every snuggle and cuddle party. </p>
+    <p>In my former life as an educator, I learned how to affectively communicate with colleagues to build a curriculum from scratch. These days, I put those skills to use collaborating with other web developer to build clean code. I made this major career switch, because I am passionate about my work as a full-stack developer. I am always challenged to discover something new, and truly love using my skills to solve a problem. </p>
+</body>
+</html>
