--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>  
+    <head>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
         <title>Cait Sidener</title>
     </head>
 
 <body>
     <h1>Cait Sidener</h1>
-    
+    <div id="ovoMenu">
+    <a href="index.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
+
+    </div>
     <br>
 
     <h1>About Me</h1>
     
     <br>
 
-    <img src="assets/images/IMG_1294.jpg" alt="Image of Cait Sidener with her husband and daughter"/>
+    <img src="assets/images/IMG_1294.jpg" width="30%" height="30%" alt="Image of Cait Sidener with her husband and daughter"/>
 
     <br>
 
