--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
+        <title>Cait Sidener</title>
+    </head>
 
+<body>
+    <div id="myName">
+    <h1>Cait Sidener</h1>
+    </div>
+
+    <div id="ovoMenu">
+    <a href="index.html" STYLE="text-decoration: none">About </a>
+    <a href="portfolio.html" STYLE="text-decoration: none">  Portfolio  </a>
+    <a href="contact.html" STYLE="text-decoration: none">Contact</a>
+
+    </div>
+    <br>
+    <br>
+    <br>
+
+    <div id="box">
+    <h2>Portfolio</h2>
+    
+    <br>
+
+    <div class="row">
+        <div class="column"></div>
+        <div class="column"></div>
+    </div>
+
+    <!--Will need to put links in once projects are complete -->
+
+   <a href="#"STYLE="text-decoration: none">Hangman</a>
+   <a href="#"STYLE="text-decoration: none">RPG Game</a>
+   <a href="#"STYLE="text-decoration: none">Trivia Game</a>
+   <a href="#"STYLE="text-decoration: none">Rutgers Info Widget</a>
+   <a href="#"STYLE="text-decoration: none">Rock Paper Scissors</a>
