cleaning up css

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
     <head>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
         <title>Cait Sidener</title>
     </head>
 
-<body>
-    <header>
-    <h1 id="myName">Cait Sidener</h1>
+<body background="assets/images/qbkls.png">
+   
+    <div id="header">
+    <h1><span>Cait Sidener</span></h1>
         <ul>
             <li><a href="contact.html" STYLE="text-decoration: none">Contact</a></li>
             <li><a href="portfolio.html" STYLE="text-decoration: none">Portfolio</a></li>
             <li><a href="index.html" STYLE="text-decoration: none">About </a></li>
 
         </ul>
-    </header>
+    </div>
+
     <br>
     <br>
     <br>
@@ -24,7 +26,7 @@
     
     <br>
 
-    <img src="assets/images/IMG_1294.jpg" width="30%" height="30%" alt="Image of Cait Sidener with her husband and daughter"/>
+    <img src="assets/images/IMG_1294.jpg" width="30%" height="30%" alt="Image of Cait Sidener with her husband and daughter">
 
     <br>
 
@@ -32,5 +34,6 @@
     <p>I am the proud mother of an incredibly strong-willed little girl. My husband and I live in Lawrence, Kansas, where we love working on home-improvement projects, hiking around Clinton Lake, and enjoying the infrequent date night sampling the delicious foods that our town has to offer. Over the course of my child's life, I have become an expert baby wearer, made up an entirely new language called "Baby Babble," learned what to do when there is a diaper explosion (call her dada), and cherished every snuggle and cuddle party. </p>
     <p>In my former life as an educator, I learned how to affectively communicate with colleagues to build a curriculum from scratch. These days, I put those skills to use collaborating with other web developer to build clean code. I made this major career switch, because I am passionate about my work as a full-stack developer. I am always challenged to discover something new, and truly love using my skills to solve a problem. </p>
 </div>
+
 </body>
 </html>
