--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,16 @@
         <title>Cait Sidener</title>
     </head>
 
-<body>
-    <div id="myName">
-    <h1>Cait Sidener</h1>
-    </div>
-
-    <div id="ovoMenu">
-    <a href="index.html" STYLE="text-decoration: none">About </a>
-    <a href="portfolio.html" STYLE="text-decoration: none">  Portfolio  </a>
-    <a href="contact.html" STYLE="text-decoration: none">Contact</a>
-
-    </div>
+<body background="assets/images/qbkls.png">
+    <header>
+        <h1>Cait Sidener</h1>
+            <ul>
+                <li><a href="contact.html" STYLE="text-decoration: none">Contact</a></li>
+                <li><a href="portfolio.html" STYLE="text-decoration: none">Portfolio</a></li>
+                <li><a href="index.html" STYLE="text-decoration: none">About </a></li>
+                    
+            </ul>
+    </header>
     <br>
     <br>
     <br>
@@ -25,15 +24,15 @@
     
     <br>
 
-    <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-    </div>
-
     <!--Will need to put links in once projects are complete -->
 
-   <a href="#"STYLE="text-decoration: none">Hangman</a>
+   
    <a href="#"STYLE="text-decoration: none">RPG Game</a>
    <a href="#"STYLE="text-decoration: none">Trivia Game</a>
    <a href="#"STYLE="text-decoration: none">Rutgers Info Widget</a>
    <a href="#"STYLE="text-decoration: none">Rock Paper Scissors</a>
+
+        <div class="image">
+            <img src="http://lorempixel.com/400/200" alt="Placeholder"/>
+            <a href="#"STYLE="text-decoration: none"><span>Hangman</span></a>        
+        </div>
