Edited portfolio page

--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
 
         </div>
     </div>
-    
+
         <div class="box">
     
-                <h2>Contact</h2>
+                <h1 class="content">Contact</h1>
         <form>
 
             <label>Name</label>
