--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body style="background-image: url('assets/images/qbkls.png');">
 
 
-    <div class="wrapper-header">
         <div class="header">
 
             <div class="header-title">
@@ -23,10 +22,9 @@
             </ul>
 
         </div>
-    </div>
 
     <div class="box">
-        <h2>About Me</h2>
+        <h1 class="content">About Me</h1>
 
 
         <img src="assets/images/IMG_1294.jpg" width="30%" height="30%" alt="Image of Cait Sidener with her husband and daughter">
