--- a/portfolio.html
+++ b/portfolio.html
@@ -23,18 +23,21 @@
         </div>
     </div>
 
-    <div id="box">
-    <h2>Portfolio</h2>
+    <div class="box">
+        
+        <h1 class="content">Portfolio</h1>
 
     <!--Will need to put links in once projects are complete -->
 
    
-   <a href="#"STYLE="text-decoration: none">RPG Game</a>
-   <a href="#"STYLE="text-decoration: none">Trivia Game</a>
-   <a href="#"STYLE="text-decoration: none">Rutgers Info Widget</a>
-   <a href="#"STYLE="text-decoration: none">Rock Paper Scissors</a>
+   <a href="#" style="text-decoration:none">RPG Game</a>
+   <a href="#" style="text-decoration:none">Trivia Game</a>
+   <a href="#" style="text-decoration:none">Rutgers Info Widget</a>
+   <a href="#" style="text-decoration:none">Rock Paper Scissors</a>
 
-        <div class="image">
-            <img src="http://lorempixel.com/400/200" alt="Placeholder"/>
-            <a href="#"STYLE="text-decoration: none"><span>Hangman</span></a>        
-        </div>
+            <img src="../images/animals-q-c-640-480-1.jpg" alt="Placeholder">
+            <a href="#" style="text-decoration: none"><span>Hangman</span></a>        
+    </div>
+
+    </body>
+    </html>
