updates to portfolio and contact pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,20 +23,17 @@
         </div>
     </div>
 
-    <div class="box">
+    <div class="box-set">
         
         <h1 class="content">Portfolio</h1>
 
     <!--Will need to put links in once projects are complete -->
+    <figure class="box box-1"><a class="projects" href="#" style="text-decoration:none">Hangman</a></figure>
+    <figure class="box box-2"><a class="projects" href="#" style="text-decoration:none">RPG Game</a></figure>
+    <figure class="box box-3"><a class="projects" href="#" style="text-decoration:none">Trivia Game</a></figure>
+    <figure class="box box-4"><a class="projects" href="#" style="text-decoration:none">Rutgers Info Widget</a></figure>
+    <figure class="box box-5"><a class="projects" href="#" style="text-decoration:none">Rock Paper Scissors</a></figure>
 
-   
-   <a href="#" style="text-decoration:none">RPG Game</a>
-   <a href="#" style="text-decoration:none">Trivia Game</a>
-   <a href="#" style="text-decoration:none">Rutgers Info Widget</a>
-   <a href="#" style="text-decoration:none">Rock Paper Scissors</a>
-
-            <img src="../images/animals-q-c-640-480-1.jpg" alt="Placeholder">
-            <a href="#" style="text-decoration: none"><span>Hangman</span></a>        
     </div>
 
     </body>
