--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
     <head>
+            <meta charset="UTF-8">
             <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <title>Contact Me</title>
     
