--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 my passion, and helping others learn how to communicate is one of my strengths.</p>
             <p>I am the proud mother of an incredibly strong-willed little girl. My husband and I live in Lawrence, Kansas, where
                 we love working on home-improvement projects, hiking around Clinton Lake, and enjoying the infrequent date night
-                sampling the delicious foods that our town has to offer. Over the course of my child's life, I have become an
+                sampling delicious foods that our town has to offer. Over the course of my child's life, I have become an
                 expert baby wearer, made up an entirely new language called "Baby Babble," learned what to do when there is a
                 diaper explosion (call her dada), and cherished every snuggle and cuddle party. </p>
             <p>In my former life as an educator, I learned how to affectively communicate with colleagues to build a curriculum
