--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         <h1 class="content">Portfolio</h1>
 
     <!--Will need to put links in once projects are complete -->
-    <figure class="box box-1"><a class="projects" href="#" style="text-decoration:none">Hangman</a></figure>
+    <figure class="box box-1"><a class="projects" href="https://cait-sidener.github.io/Word-Guess-Game/" style="text-decoration:none">Hangman</a></figure>
     <figure class="box box-2"><a class="projects" href="#" style="text-decoration:none">RPG Game</a></figure>
     <figure class="box box-3"><a class="projects" href="#" style="text-decoration:none">Trivia Game</a></figure>
     <figure class="box box-4"><a class="projects" href="#" style="text-decoration:none">Rutgers Info Widget</a></figure>
